SRTN algo working successfully

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="main.css"/>
+    <link rel="stylesheet" href="index.css" />
     <title>Home</title>
   </head>
   <body>
@@ -12,7 +12,9 @@
       <ul>
         <li class="button1">
           <button>
-            <a href="">Shortest remaining time next (SRTN) algorithm</a>
+            <a href="SRTN.html"
+              >Shortest remaining time next (SRTN) algorithm</a
+            >
           </button>
         </li>
         <li class="button2">
