--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <ul>
         <li class="button1">
           <button>
-            <a href="SRTN.html"
+            <a href="./SRTN.html"
               >Shortest remaining time next (SRTN) algorithm</a
             >
           </button>
