--- a/SRTN.html
+++ b/SRTN.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="SRTN.css" />
   </head>
   <body>
-    <h1 class="heading_container"><center>SRTN Scheduler</center></h1>
+    <h1 class="heading_container">
+      <center>Shortest Remaining Time Next</center>
+    </h1>
 
     <div class="container">
       <p class="para">
