--- a/SRTN.html
+++ b/SRTN.html
@@ -62,20 +62,20 @@
         <li>
           <p class="para">
             SRTN has a higher complexity than other scheduling algorithms like
-            FCFS (First Come First Serve) and RR (Round Robin), because it
+            FCFS (First Come First Serve) because it
             requires frequent context switches and preemptions.
           </p>
           <hr />
           <img
             class="img1"
-            src="Screenshot 2024-03-28 235955.png"
-            height="550px"
+            src="Screenshot 2024-03-29 103553.png"
+            height="600px"
             width="650px"
           />
           <img
             class="img2"
-            src="Screenshot 2024-03-29 000024.png"
-            height="700px"
+            src="Screenshot 2024-03-29 103617.png"
+            height="650px"
             width="650px"
           />
           <hr />
@@ -85,12 +85,6 @@
       <ul>
         <li>
           <p class="para">Short processes are handled very quickly.</p>
-        </li>
-        <li>
-          <p class="para">
-            The system also requires very little overhead since it only makes a
-            decision when a process completes or a new process is added.
-          </p>
         </li>
         <li>
           <p class="para">
