PCM partially done

--- a/SRTN.html
+++ b/SRTN.html
@@ -62,8 +62,8 @@
         <li>
           <p class="para">
             SRTN has a higher complexity than other scheduling algorithms like
-            FCFS (First Come First Serve) because it requires frequent context
-            switches and preemptions.
+            FCFS (First Come First Serve) because it
+            requires frequent context switches and preemptions.
           </p>
           <hr />
           <img
@@ -106,9 +106,6 @@
             Long processes may be held off indefinitely if short processes are
             continually added.
           </p>
-        </li>
-        <li>
-          <p class="para">Context switch overhead is there</p>
         </li>
       </ul>
     </div>
