--- a/PCM.html
+++ b/PCM.html
@@ -44,6 +44,25 @@
             Let's see the code for the above problem:
           </p>
         <hr />
+        <img
+            class="img1"
+            src="Screenshot 2024-04-19 003853.png"
+            height="400px"
+            width="400px"
+          />
+          <img
+            class="img2"
+            src="Screenshot 2024-04-19 004211.png"
+            height="400px"
+            width="400px"
+          />
+          <img
+            class="img3"
+            src="Screenshot 2024-04-19 004506.png"
+            height="400px"
+            width="400px"
+          />
+        <hr />
         </li>
       </ul>
       <h2 class="heading"><center>Advantages:</center></h2>
