--- a/SRTN.html
+++ b/SRTN.html
@@ -62,21 +62,21 @@
         <li>
           <p class="para">
             SRTN has a higher complexity than other scheduling algorithms like
-            FCFS (First Come First Serve) because it
-            requires frequent context switches and preemptions.
+            FCFS (First Come First Serve) because it requires frequent context
+            switches and preemptions.
           </p>
           <hr />
           <img
             class="img1"
             src="Screenshot 2024-03-29 103553.png"
-            height="600px"
-            width="650px"
+            height="575px"
+            width="625px"
           />
           <img
             class="img2"
             src="Screenshot 2024-03-29 103617.png"
-            height="650px"
-            width="650px"
+            height="575px"
+            width="665px"
           />
           <hr />
         </li>
