--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </li>
         <li class="button3">
           <button>
-            <a href=""
+            <a href="SSTF.html"
               >Shortest seek time first (SSTF) disc scheduling algorithm</a
             >
           </button>
