--- a/PCM.html
+++ b/PCM.html
@@ -28,7 +28,7 @@
       <p class="para">
         The task of the Producer is to produce the item, put it into the memory
         buffer, and again start producing items. Whereas the task of the
-        Consumer is to consume the item from the memory buffer.
+        Consumer is to consume the item from the memory buffer
       </p>
     <hr>
       <h2 class="heading">
