--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Home</title>
   </head>
   <body>
-    <h1><center>Select anyone one Alogrithm</center></h1>
+    <h1><center>Select anyone Alogrithm</center></h1>
     <div class="buttons">
       <ul>
         <li class="button1">
@@ -33,7 +33,7 @@
         </li>
         <li class="button4">
           <button>
-            <a href="">Optimal page replacement algorithm</a>
+            <a href="OPRA.html">Optimal page replacement algorithm</a>
           </button>
         </li>
       </ul>
